[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clusterx"
version = "0.1.0"
description = "Multi-algorithm clustering toolkit — K-means, DBSCAN, GMM, Hierarchical"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
full = ["numpy"]

[project.scripts]
clusterx = "clusterx.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["clusterx*"]
